# 3D-MIL-QSSR

./: LICENSE  README.md  README.rst  config.yaml  example.ipynb  pyproject.toml
data/: test_reactions.txt  test_sets.pickle
datasets/aptc-1/: aptc_1_test_datatest.csv  aptc_1_training_datatest.csv
datasets/aptc-12/: aptc_12_test_datatest.csv  aptc_12_training_datatest.csv
datasets/aptc-2/: aptc_2_test_datatest.csv  aptc_2_training_datatest.csv
datasets/pac/: pac_both_out_datatest.csv  pac_cat_out_datatest.csv  pac_react_out_dataset.csv  pac_training_datatest.csv
miqssr/: cli.py  model_build.py  smarts_features.fdef  smarts_features.txt  utils.py
miqssr/conformer_generation/: gen_conformers.py
miqssr/conformer_generation/psearch_master/: gen_conf_rdkit.py
miqssr/descriptor_calculation/: pmapper_3d.py
miqssr/estimators/: attention_nets.py  base_nets.py  utils.py  wrappers.py
