[tool.poetry]
name = "miqssr"
version = "0.1"
description = "3D multi-instance (multi-conformer) catalyst modelling"
authors = ["Laboratoire de Chemoinformatique <dvzankov@gmail.com>"]
license = "MIT"
packages = [{ include = "miqssr", from = "." },]

[tool.poetry.dependencies]
python = ">=3.10"
rdkit-pypi = "2021.9.4"
scikit-learn = "1.3"
pandas = "2.0.3"
networkx = "3.1"
pmapper = "1.0.3"
click = ">=8.0.0"
pyyaml = "6.0.1"

[tool.poetry.group.cpu.dependencies]
torch = ">=1.13,<1.14"
torch-optimizer = "0.3.0"

[tool.poetry.scripts]
miqssr_build_model = "miqssr.cli:build_model_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
